--- a/pom.xml
+++ b/pom.xml
@@ -72,5 +72,14 @@
             <version>1.18.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>fr.minuskube</groupId>
+            <artifactId>netherboard-bukkit</artifactId>
+            <version>1.2.2</version>
+        </dependency>
     </dependencies>
+
+
+
 </project>
