--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,10 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -95,6 +99,14 @@
             <groupId>net.kyori</groupId>
             <artifactId>adventure-text-minimessage</artifactId>
             <version>4.1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.InventivetalentDev</groupId>
+            <artifactId>GlowAPI</artifactId>
+            <version>1.5.2-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/GlowAPI_v1.5.2-SNAPSHOT.jar</systemPath>
         </dependency>
     </dependencies>
 
